--- a/src/styles/theme.less
+++ b/src/styles/theme.less
@@ -2,6 +2,6 @@
 @title-color: #181818;
 @text-color-thin: #aaaaaa;
 @page-min-width: 1200px;
-
+@border-color: #e9e9e9;
 @page-background-color: #f4f4f4;
 @layout-header-background-color: #f5f5f5;
